--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,8 @@
 {{{body}}}
 
-<h2>Home</h2>
+<a href="/"><img src="logo.svg" width="200px" alt=""></a>
+<h2>Lorem Ipsun</h2>
+<p>Lorem Ipsun dolor sit amet</p>
+
+
+
