--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+
 <div id="leftHalf">
     <div>
         <a href="/"><img id="logo"  src="logo.svg" width="20%" alt=""></a>
@@ -9,18 +10,36 @@
 
 <div class="container" id="rightHalf">
 
-    <h1>Entrar</h1>
-    <form action="">
-        <div class="mb-3 px-5">
-            <label for="login" class="form-label">Email</label>
-            <input type="email" class="form-control" id="login">
-        </div>
+
+    <div class="d-flex flex-column justify-content-center">
         
-        <div class="mb-3 px-5">
-            <label for="senha" class="form-label">Senha</label>
-            <input type="password" class="form-control" id="senha">
+        <div class="mx-5 my-5">
+            <h1><b>Entrar</b></h1>
         </div>
-    </form>
+
+        <form action="">
+            <div class="align-content-end">
+                <div class="mb-3 px-5 ">
+                    <label for="login" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="login">
+                </div>
+            
+                <div class="mb-3 px-5">
+                    <label for="senha" class="form-label">Senha</label>
+                    <input type="password" class="form-control" id="senha">
+                </div>
+
+                <div class="mt-4 px-5">
+                    <button class="btn btn-info btn-block" type="button">Entrar</button>
+                </div>
+
+            </div>            
+            
+        </form> 
+
+    </div>
     
     
 </div>
+
+
