--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,11 +36,24 @@
     position: absolute;
     right: 0px;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #logo
 {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 1%;
+  left: 1%;
+  max-width: 300px;
 } 
+
+#entrar
+{
+  color: var(--texto-icones);
+  font-size: 4em;
+  position: relative;
+  bottom: 10vh;
+  left: 2%;
+}
