--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,42 +4,32 @@
         <a href="/"><img id="logo"  src="logo.svg" width="20%" alt=""></a>
     </div>
     
-    <img width="50%" src="login.svg" alt="">
+    <img width="60%" src="login.svg" alt="">
 
 </div>
 
 <div class="container" id="rightHalf">
+  
+    <div>
+        <h1 id="entrar" class="fw-bold"><b>Entrar</b></h1>
+    </div>
 
-
-    <div class="d-flex flex-column justify-content-center">
+    <form action="/">
         
-        <div class="mx-5 my-5">
-            <h1><b>Entrar</b></h1>
+        <div class="px-5 py-5">
+            <label for="login" class="mb-3 form-label">Email</label>
+            <input type="email" class="form-control" id="login" placeholder="Seu e-mail" required>
+            <label for="senha" class="my-3 form-label">Senha</label>
+            <input type="password" class="form-control" id="senha" placeholder="Senha" required>
         </div>
 
-        <form action="">
-            <div class="align-content-end">
-                <div class="mb-3 px-5 ">
-                    <label for="login" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="login">
-                </div>
-            
-                <div class="mb-3 px-5">
-                    <label for="senha" class="form-label">Senha</label>
-                    <input type="password" class="form-control" id="senha">
-                </div>
+        <div class="px-5">
+            <button class="btn btn-info btn-block" type="button"><b>Entrar</b></button>
+        </div>
+        
+        
+    </form> 
 
-                <div class="mt-4 px-5">
-                    <button class="btn btn-info btn-block" type="button">Entrar</button>
-                </div>
-
-            </div>            
-            
-        </form> 
-
-    </div>
-    
-    
 </div>
 
 
