--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,7 @@
 {{{body}}}
 
-{{!-- <a href="/"><img src="logo.svg" width="200px" alt=""></a>
+<a href="/"><img src="logo.svg" width="200px" alt=""></a>
 <h2>Lorem Ipsun</h2>
-<p>Lorem Ipsun dolor sit amet</p> --}}
+<p>Lorem Ipsun dolor sit amet</p>
+
+{{> navbar}}
