--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -1,5 +1,7 @@
-<a href="/"><img src="logo.svg" width="200px" alt=""></a>
-<h2>Lorem Ipsun</h2>
-<p>Lorem Ipsun dolor sit amet</p>
 
 {{> navbar}}
+
+<div class="page">
+    <h2>Lorem Ipsun</h2>
+    <p>Lorem Ipsun dolor sit amet</p>
+</div>
