--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,5 +1,11 @@
 <div class="navbarPartials">
 
-    <p>Teste 1...2...3...</p>
+    <a href="/"><img src="logo.svg" width="200px" alt=""></a>
+    <a href="#">Início</a>
+    <a href="#">Veículos</a>
+    <a href="#">Alocações</a>
+    <a href="#">Clientes</a>
+    <a href="#">Configurações</a>
+    <a href="#">Sair</a>
 
 </div>
