--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,6 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content:space-around;
   padding-left: 1%;
 
 }
@@ -84,3 +83,17 @@
   left: 1%;
   max-width: 300px;
 } 
+
+
+svg
+{
+  fill: #152536;
+}
+
+.asdf{
+  background-color: #152536 !important;
+}
+
+#home{
+  fill: white;
+}
