--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,32 @@
-{{{body}}}
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg static-top" id="navbar">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <a href="/"><img id="logo"  src="logo.svg" width="20%" alt=""></a>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto">
+            
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+             </li>
+             <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-<a href="/"><img src="logo.svg" width="200px" alt=""></a>
-<h2>Lorem Ipsun</h2>
-<p>Lorem Ipsun dolor sit amet</p>
+<!-- Page Content -->
+<div class="container">
+  <h1 class="mt-4">Logo Nav by Start Bootstrap</h1>
+  <p>The logo in the navbar is now a default Bootstrap feature in Bootstrap! Make sure to set the height
+    of the logo within the HTML or using CSS. For best results, use an SVG image as your logo.</p>
+</div>
