--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -1,7 +1,52 @@
 
 {{> navbar}}
+{{> icons}}
 
 <div class="page">
-    <h2>Lorem Ipsun</h2>
-    <p>Lorem Ipsun dolor sit amet</p>
+    <div class="container m-5">
+        <h1>Início</h2>
+        <hr>
+        
+        <div class="card">
+            <div id="card" class="card-header">
+                <svg class="m-1" width="16" height="16"><use xlink:href="#car"/></svg>
+                Veículos
+            </div>
+            <div class="card-body">
+                    
+                    <table class="table">
+                        <thead>
+                            <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">First</th>
+                            <th scope="col">Last</th>
+                            <th scope="col">Handle</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
+                            </tr>
+                            <tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>@fat</td>
+                            </tr>
+                            <tr>
+                            <th scope="row">3</th>
+                            <td colspan="2">Larry the Bird</td>
+                            <td>@twitter</td>
+                            </tr>
+                        </tbody>
+
+                    </table>
+                
+                <a href="#" class="link-info">Ver mais veículos</a>
+            </div>
+        </div>
+    </div>
 </div>
