--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,10 +57,6 @@
   left: 0px;
   width: 25vw;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  padding-left: 1%;
-
 }
 
 .page
@@ -90,10 +86,14 @@ svg
   fill: #152536;
 }
 
-.asdf{
-  background-color: #152536 !important;
+
+#home
+{
+  fill: white;
 }
 
-#home{
-  fill: white;
+
+#card
+{
+  background-color: var(--background);
 }
