--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -1,4 +1,3 @@
-
 {{> navbar}}
 {{> icons}}
 
@@ -12,8 +11,7 @@
                 <svg class="m-1" width="16" height="16"><use xlink:href="#car"/></svg>
                 Veículos
             </div>
-            <div class="card-body">
-                    
+            <div class="card-body">     
                     <table class="table">
                         <thead>
                             <tr>
@@ -24,7 +22,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr id="navbar">
                             <th scope="row">1</th>
                             <td>Mark</td>
                             <td>Otto</td>
@@ -36,7 +34,7 @@
                             <td>Thornton</td>
                             <td>@fat</td>
                             </tr>
-                            <tr>
+                            <tr id="navbar">
                             <th scope="row">3</th>
                             <td colspan="2">Larry the Bird</td>
                             <td>@twitter</td>
@@ -46,7 +44,37 @@
                     </table>
                 
                 <a href="#" class="link-info">Ver mais veículos</a>
+              </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-6 mt-3 mb-3 mb-sm-0">
+            <div class="card">
+              <div id="card" class="card-header">
+                  <svg class="m-1" width="16" height="16"><use xlink:href="#road"/></svg>
+                  Alocações para hoje
+              </div>
+              <div class="card-body">
+                <h1 id="card-info" class="card-title text-center">02</h1>
+                <a href="#" class="link-info">Consultar alocações</a>
+              </div>
             </div>
         </div>
-    </div>
+
+        <div class="col-sm-6 mt-3">
+          <div class="card">
+            <div id="card" class="card-header">
+                  <svg class="m-1" width="16" height="16"><use xlink:href="#client"/></svg>
+                  Clientes Cadatrados
+              </div>
+            <div class="card-body">
+              <h1 id="card-info" class="card-title text-center">50</h1>
+              <a href="#" class="link-info">Consultar Clientes</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      </div>
 </div>
