--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@
   position: absolute;
   left: 0px;
   width: 25vw;
-  height: 100vh;
+  height: 110%;
 }
 
 .page
@@ -95,5 +95,16 @@ svg
 
 #navbar
 {
-  background-color: #AFD3E2;
+  /* background-color: #AFD3E2; */
+  background-color: var(--fundo-tabela);
+}
+
+#card
+{
+  background-color: var(--background);
+}
+
+#card-info
+{
+  font-size: 4em;
 }
