--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -5,7 +5,7 @@
 <main class="position-sticky pt-3 sidebar-sticky">
 
     <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+    <a href="/" class="d-flex justify-content-between align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
       <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#house"/></svg>
       <span class="fs-4"><a href="/"><img src="logo.svg" width="200px" alt=""></a></span>
     </a>
