navbar, home, dashboard

--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -2,7 +2,7 @@
 {{> icons}}
 
 <div class="page">
-    <div class="container m-5">
+    <div class="container mt-1">
         <h1>Início</h2>
         <hr>
         
