--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,10 +9,6 @@
         </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
-            
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Quem somos</a>
-             </li>
              <li class="nav-item">
                 <a class="nav-link" href="/entrar">Entrar</a>
             </li>
@@ -25,9 +21,8 @@
 </nav>
 
 
-
 <div class="container">
-  <div class="row align-items-start">
+  <div class="row justify-content-center align-items-center align-content-center">
     <div class="col">
         <h1 class="mt-4">QUEM SOMOS</h1>
         <p style="text-align:justify">Xand&atilde;o Car &eacute; uma empresa de autom&oacute;veis que se dedica a fornecer aos seus clientes os melhores produtos e servi&ccedil;os. A empresa foi fundada h&aacute; mais de 20 anos por Alexandre, um empreendedor vision&aacute;rio que sempre acreditou na import&acirc;ncia de oferecer um atendimento ao cliente excepcional.</p>
