--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,15 +55,30 @@
   background-color: var(--background);
   position: absolute;
   left: 0px;
-  width: 25vw;
-  height: 110%;
+  width: 20vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+#nav-head
+{
+  position: absolute;
+  top: 20px;
+}
+
+#nav-footer
+{
+  position: absolute;
+  bottom: 20px;
 }
 
 .page
 {
   color: var(--texto-icones);
-  width: 75vw;
-  height: 100vh;
+  width: 79vw;
+  max-height: 100vh;
   position: absolute;
   right: 0px;
   display: flex;
@@ -96,7 +111,7 @@ svg
 #navbar
 {
   /* background-color: #AFD3E2; */
-  background-color: var(--fundo-tabela);
+  background-color: var(--background);
 }
 
 #card
