--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
         <h1 id="entrar" class="fw-bold"><b>Entrar</b></h1>
     </div>
 
-    <form action="/">
+    <form>
         
         <div class="px-5 py-5">
             <label for="login" class="mb-3 form-label">Email</label>
@@ -24,7 +24,7 @@
         </div>
 
         <div class="px-5">
-            <button class="btn btn-info btn-block" type="button"><b>Entrar</b></button>
+            <button href="/dashboard" class="btn btn-info btn-block" type="button"><b>Entrar</b></button>
         </div>
         
         
