--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -2,13 +2,15 @@
 {{> icons}}
 
 <div class="page">
-    <div class="container mt-1">
-        <h1>Início</h2>
-        <hr>
+    <div class="container">
+        <div class="mt-1">
+          <h1>Início</h2>
+          <hr>
+        </di >
         
         <div class="card">
             <div id="card" class="card-header">
-                <svg class="m-1" width="16" height="16"><use xlink:href="#car"/></svg>
+                <svg class="m-1" width="20" height="20"><use xlink:href="#car"/></svg>
                 Veículos
             </div>
             <div class="card-body">     
@@ -43,7 +45,7 @@
 
                     </table>
                 
-                <a href="#" class="link-info">Ver mais veículos</a>
+                <a href="/veiculos" class="link-info">Ver mais veículos</a>
               </div>
         </div>
 
@@ -51,12 +53,12 @@
           <div class="col-sm-6 mt-3 mb-3 mb-sm-0">
             <div class="card">
               <div id="card" class="card-header">
-                  <svg class="m-1" width="16" height="16"><use xlink:href="#road"/></svg>
+                  <svg class="m-1" width="20" height="20"><use xlink:href="#road"/></svg>
                   Alocações para hoje
               </div>
               <div class="card-body">
                 <h1 id="card-info" class="card-title text-center">02</h1>
-                <a href="#" class="link-info">Consultar alocações</a>
+                <a href="/alocacoes" class="link-info">Consultar alocações</a>
               </div>
             </div>
         </div>
@@ -64,12 +66,12 @@
         <div class="col-sm-6 mt-3">
           <div class="card">
             <div id="card" class="card-header">
-                  <svg class="m-1" width="16" height="16"><use xlink:href="#client"/></svg>
+                  <svg class="m-1" width="20" height="20"><use xlink:href="#client"/></svg>
                   Clientes Cadatrados
               </div>
             <div class="card-body">
               <h1 id="card-info" class="card-title text-center">50</h1>
-              <a href="#" class="link-info">Consultar Clientes</a>
+              <a href="/clientes" class="link-info">Consultar Clientes</a>
             </div>
           </div>
         </div>
