--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -4,41 +4,41 @@
 
   <main class="">
 
-    <div id="nav-head">
-      <a href="/" class="d-flex justify-content-between align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-        <span class="fs-4"><a href="/"><img src="logo.svg" width="200px" alt=""></a></span>
+    <div id="nav-head" class="mt-5 mb-5">
+      <a href="/">
+        <span class="fs-4"><a href="/"><img src="logo.svg" width="250px" alt=""></a></span>
       </a>
     </div>
     
-    <div id="nav-body" class="mb-5">
-        <ul class="nav nav-pills flex-column justify-content-center">
+    <div id="nav-body" class="my-5">
+        <ul class="my-5 nav nav-pills flex-column justify-content-center">
         <li class="nav-item">
-          <a href="#" class="nav-link active" aria-current="page">
-            <svg class="m-1" width="16" height="16"><use xlink:href="#home"/></svg>
+          <a href="/dashboard" class="nav-link active" aria-current="page">
+            <svg class="m-2" width="25" height="25"><use xlink:href="#home"/></svg>
             Inicio
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-dark">
-            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#car"/></svg>
+          <a href="/veiculos" class="nav-link text-dark">
+            <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#car"/></svg>  
             Veículos
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-dark">
-            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#road"/></svg>
+          <a href="/alocacoes" class="nav-link text-dark">
+            <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#road"/></svg>
             Alocações
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-dark">
-            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#client"/></svg>
+          <a href="/clientes" class="nav-link text-dark">
+            <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#client"/></svg>
             Clientes
           </a>
         </li>
         <li>
           <a href="#" class="nav-link text-dark">
-            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#settings"/></svg>
+            <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#settings"/></svg>
             Configurações
           </a>
         </li>
@@ -47,7 +47,7 @@
       
       <div id="nav-footer" class="mt-5"> 
         <a href="/" class="nav-link text-dark">
-            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#exit"/></svg>
+            <svg class="bi pe-none me-2" width="25" height="25"><use xlink:href="#exit"/></svg>
             Sair
         </a>
       </div>
