--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,115 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    background-color: aqua;
-}
+    box-sizing: border-box;
+  }
+  
+  body {
+    background-color: #AFD3E2
+    ;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  .home {
+    background-color: #fff;
+    padding: 15px 25px;
+    border-radius: 10px;
+  }
+  
+  .home .botoes {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding-top: 25px;
+    border-top: 2px solid #AFD3E2
+    ;
+    padding-bottom: 10px;
+  }
+  
+  .formUser {
+    background-color: #fff;
+    padding: 15px 25px;
+    border-radius: 10px;
+    min-width: max-content;
+  }
+  
+  .formUser .row .col {
+    margin: 10px 0;
+  }
+  
+  .formUser .botoes {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .container {
+    background-color: #fff;
+    padding: 15px 25px;
+    border-radius: 10px;
+  }
+  
+  .container .title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+  }
+  
+  .container .title div {
+    display: flex;
+    gap: 20px;
+  }
+  
+  .title2 {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  div.info-title {
+    background-color: #ccc;
+    font-weight: bold;
+  }
+  
+  ul.usuarios li {
+    border-bottom: 1px solid #AFD3E2
+    ;
+  }
+  
+  .btn {
+    text-decoration: none;
+    background-color: #AFD3E2
+    ;
+    color: #fff;
+    transition: .3s;
+  }
+  
+  .btn:hover {
+    color: #fff;
+    transform: scale(1.1);
+    background-color: #8ac9e3
+    ;
+  }
+  
+  .aviso_404 {
+    background-color: #fff;
+    padding: 15px 25px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .aviso_404 a {
+    width: 80%;
+    background-color: rgb(129, 6, 6);
+  }
