--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,7 +53,7 @@
 .navbarPartials
 {
   background-color: var(--background);
-  position: absolute;
+  position: fixed;
   left: 0px;
   width: 20vw;
   height: 100vh;
@@ -61,10 +61,9 @@
   flex-direction: column;
 }
 
+
 #nav-head
 {
-  /* position: absolute; */
-  /* top: 2vh; */
   display: flex;
   justify-content: center;
   align-content: flex-start;
@@ -72,11 +71,13 @@
   
 }
 
-#nav-body
+.navbar-main
 {
-  align-content: center;
-  align-items: center;
+  display: flex; 
+  flex-direction: column;
+  align-content: space-between;
 }
+
 
 #nav-footer
 {
