--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -6,7 +6,7 @@
         <div class="mt-1">
           <h1>Início</h2>
           <hr>
-        </di >
+        </div>
         
         <div class="card">
             <div id="card" class="card-header">
