--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -6,7 +6,7 @@
 
     <div id="nav-head" class="mt-5 mb-5">
       <a href="/">
-        <span class="fs-4"><a href="/"><img src="logo.svg" width="250px" alt=""></a></span>
+        <span class="fs-4"><a href="/"><img src="/logo.svg" width="250px" alt=""></a></span>
       </a>
     </div>
     
@@ -32,7 +32,7 @@
         </li>
         <li>
           <a href="/clientes" class="nav-link text-dark">
-            <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#client"/></svg>
+            <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#clients"/></svg>
             Clientes
           </a>
         </li>
