--- a/views/dashboard/allocation/allocation.handlebars
+++ b/views/dashboard/allocation/allocation.handlebars
@@ -17,35 +17,20 @@
                 <table class="table">
                     <thead>
                         <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Veículo</th>
+                        <th scope="col">Placa</th>
+                        <th scope="col">Cliente</th>
+                        <th scope="col">Data de alocação</th>
+                        <th scope="col">Editar/Excluir</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr id="navbar">
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        </tr>
-                        <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        </tr>
-                        <tr id="navbar">
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
-                        </tr>
                     </tbody>
+                        {{> tabela_alocacoes}}
                 </table>
             </div>
         </div>
-        <button type="button" class="btn btn-info btn-block mt-5" > Cadastrar nova alocação</button>
+        <a href="/alocacoes/add" class="btn btn-info btn-block mt-5" > Cadastrar nova alocação</a>
     </div>
     
 </div>
