--- a/views/dashboard/allocation/allocation.handlebars
+++ b/views/dashboard/allocation/allocation.handlebars
@@ -3,7 +3,7 @@
 
 <div class="page">
     <div class="container">
-        <div class="mt-2">
+        <div class="mt-5 mb-4">
             <h1>Alocações</h2>
             <hr>
         </div>
@@ -14,7 +14,7 @@
                 Alocações
             </div>
             <div class="card-body">     
-                <table class="table">
+                <table class="table table-sm">
                     <thead>
                         <tr>
                         <th scope="col">Veículo</th>
@@ -25,8 +25,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                    </tbody>
                         {{> tabela_alocacoes}}
+                    </tbody>
+                        
                 </table>
             </div>
         </div>
