--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -37,7 +37,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="nav-link text-dark">
+          <a href="/configuracoes" class="nav-link text-dark">
             <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#settings"/></svg>
             Configurações
           </a>
