--- a/views/dashboard/allocation/a_allocation.handlebars
+++ b/views/dashboard/allocation/a_allocation.handlebars
@@ -3,7 +3,7 @@
 
 <div class="page">
 <div class="container">
-        <div class="mt-2">
+        <div class="mt-5 mb-4">
           <h1>Alocações</h2>
           <hr>
         </div>
