--- a/views/dashboard/dashboard.handlebars
+++ b/views/dashboard/dashboard.handlebars
@@ -3,7 +3,7 @@
 
 <div class="page">
     <div class="container">
-        <div class="mt-2">
+        <div class="mt-5 mb-4">
           <h1>Início</h2>
           <hr>
         </div>
@@ -13,8 +13,8 @@
                 <svg class="m-1" width="20" height="20"><use xlink:href="#car"/></svg>
                 Veículos
             </div>
-            <div class="card-body">     
-                    <table class="table">
+            <div class="card-body d-flex flex-column align-items-center">     
+                    <table class="table table-sm">
                         <thead>
                             <tr>
                             <th scope="col">#</th>
@@ -24,7 +24,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr id="navbar">
+                            <tr>
                             <th scope="row">1</th>
                             <td>Mark</td>
                             <td>Otto</td>
@@ -36,7 +36,7 @@
                             <td>Thornton</td>
                             <td>@fat</td>
                             </tr>
-                            <tr id="navbar">
+                            <tr>
                             <th scope="row">3</th>
                             <td colspan="2">Larry the Bird</td>
                             <td>@twitter</td>
@@ -45,7 +45,7 @@
 
                     </table>
                 
-                <a href="/veiculos" class="link-info">Ver mais veículos</a>
+                <a href="/veiculos" class="link-info">Ver mais veículos › </a>
               </div>
         </div>
 
@@ -58,7 +58,7 @@
               </div>
               <div class="card-body">
                 <h1 id="card-info" class="card-title text-center">02</h1>
-                <a href="/alocacoes" class="link-info">Consultar alocações</a>
+                <a href="/alocacoes" class="link-info">Consultar alocações ›</a>
               </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
               </div>
             <div class="card-body">
               <h1 id="card-info" class="card-title text-center">50</h1>
-              <a href="/clientes" class="link-info">Consultar Clientes</a>
+              <a href="/clientes" class="link-info">Consultar Clientes ›</a>
             </div>
           </div>
         </div>
