--- a/views/partials/tabela_usuarios.handlebars
+++ b/views/partials/tabela_usuarios.handlebars
@@ -1,11 +1,27 @@
 <div class="tabela_usuariosPartials"> 
 
     <tr>
-        <td>Info 01</td>
+        <td>Usuário</td>
         <td>Info 02</td>
         <td>Info 03</td>
         <td>Info 04</td>
         <td>Info 05</td>
     </tr>
+
+    <tr>
+        <td>Usuário</td>
+        <td>Info 02</td>
+        <td>Info 03</td>
+        <td>Info 04</td>
+        <td>Info 05</td>
+    </tr> 
+
+    <tr>
+        <td>Usuário</td>
+        <td>Info 02</td>
+        <td>Info 03</td>
+        <td>Info 04</td>
+        <td>Info 05</td>
+    </tr> 
 
 </div>
