--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,11 +8,15 @@
 }
 
 
-
 *
 {
   margin: 0;
   padding: 0;
+}
+
+p
+{
+  font-weight: 400;
 }
 
 #leftHalf 
@@ -21,7 +25,7 @@
     width: 50%;
     position: absolute;
     left: 0px;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -35,7 +39,7 @@
     font-weight:bold;
     position: absolute;
     right: 0px;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
