--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -14,15 +14,15 @@
     <div id="nav-body" class="my-5">
         <ul id="nav-bar" class="my-5 nav nav-pills flex-column justify-content-center">
 
-          <li id="home" class="nav-item" onclick="change()" >
-            <a href="/dashboard" class="nav-link active" aria-current="page">
+          <li id="home" class="nav-item">
+            <a id="home" href="/dashboard" class="nav-link text-dark" aria-current="page">
               <svg class="m-2" width="25" height="25"><use xlink:href="#home"/></svg>
               Inicio
             </a>
           </li>
-          <li id="veiculos" onclick="change()">
-            <a href="/veiculos" class="nav-link text-dark" onclick="change()">
-              <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#car"/ onclick="change()"></svg>  
+          <li id="veiculos">
+            <a href="/veiculos" class="nav-link text-dark">
+              <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#car"/></svg>  
               Veículos
             </a>
           </li>
