--- a/views/partials/tabela_alocacoes.handlebars
+++ b/views/partials/tabela_alocacoes.handlebars
@@ -5,7 +5,10 @@
         <td>Info 02</td>
         <td>Info 03</td>
         <td>Info 04</td>
-        <td>Info 05</td>
+        <td >
+            <a id="edit_btn" class="btn" href="#" >{{> edit}}</a>
+            <a id="exclude_btn" class="btn" href="#" >{{> exclude}}</a>
+        </td>
     </tr>
 
 </div>
