--- a/views/partials/tabela_veiculos.handlebars
+++ b/views/partials/tabela_veiculos.handlebars
@@ -1,11 +1,28 @@
+{{> icons}}
 <div class="tabela_veiculosPartials"> 
 
     <tr>
-        <td>Info 01</td>
+        <td>Veiculo 01</td>
         <td>Info 02</td>
         <td>Info 03</td>
         <td>Info 04</td>
-        <td>Info 05</td>
+        <td >
+            <a id="edit_btn" class="btn" href="#" >{{> edit}}</a>
+            <a id="exclude_btn" class="btn" href="#" >{{> exclude}}</a>
+        </td>
+        
+    </tr>
+
+    <tr>
+        <td>Veiculo 02</td>
+        <td>Info 02</td>
+        <td>Info 03</td>
+        <td>Info 04</td>
+        <td >
+            <a id="edit_btn" class="btn" href="#" >{{> edit}}</a>
+            <a id="exclude_btn" class="btn" href="#" >{{> exclude}}</a>
+        </td>
+
     </tr>
 
 </div>
