--- a/views/partials/tabela_usuarios.handlebars
+++ b/views/partials/tabela_usuarios.handlebars
@@ -5,7 +5,10 @@
         <td>Info 02</td>
         <td>Info 03</td>
         <td>Info 04</td>
-        <td>Info 05</td>
+        <td >
+            <a id="edit_btn" class="btn" href="#" >{{> edit}}</a>
+            <a id="exclude_btn" class="btn" href="#" >{{> exclude}}</a>
+        </td>
     </tr>
 
     <tr>
@@ -13,7 +16,10 @@
         <td>Info 02</td>
         <td>Info 03</td>
         <td>Info 04</td>
-        <td>Info 05</td>
+        <td >
+            <a id="edit_btn" class="btn" href="#" >{{> edit}}</a>
+            <a id="exclude_btn" class="btn" href="#" >{{> exclude}}</a>
+        </td>
     </tr> 
 
     <tr>
@@ -21,7 +27,10 @@
         <td>Info 02</td>
         <td>Info 03</td>
         <td>Info 04</td>
-        <td>Info 05</td>
+        <td >
+            <a id="edit_btn" class="btn" href="#" >{{> edit}}</a>
+            <a id="exclude_btn" class="btn" href="#" >{{> exclude}}</a>
+        </td>
     </tr> 
 
 </div>
