--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,17 +14,17 @@
         <h1 id="entrar" class="fw-bold"><b>Entrar</b></h1>
     </div>
 
-    <form action="/">
+    <form action="/loginpost" method="post">
         
         <div class="px-5 py-5">
             <label for="login" class="mb-3 form-label">Email</label>
-            <input type="email" class="form-control" id="login" placeholder="Seu e-mail" required>
+            <input name="email"  class="form-control" id="email" placeholder="Seu e-mail" required>
             <label for="senha" class="my-3 form-label">Senha</label>
-            <input type="password" class="form-control" id="senha" placeholder="Senha" required>
+            <input name="senha" type="password" class="form-control" id="senha" placeholder="Senha" required>
         </div>
 
         <div class="px-5">
-            <button class="btn btn-info btn-block" type="button"><b>Entrar</b></button>
+            <button class="btn btn-info btn-block" type="submit"><b>Entrar</b></button>
         </div>
         
         
