--- a/views/dashboard/client/client.handlebars
+++ b/views/dashboard/client/client.handlebars
@@ -1,4 +1,35 @@
 {{> navbar}}
 {{> icons}}
 
-<h1>Clientes</h1>
+<div class="page">
+    <div class="container">
+        <div class="mt-2">
+            <h1>Clientes</h2>
+            <hr>
+        </div>
+
+        <div class="card">
+            <div id="card" class="card-header">
+                <svg class="m-1" width="20" height="20"><use xlink:href="#road"/></svg>
+                Clientes Cadastrados
+            </div>
+            <div class="card-body">     
+                <table class="table">
+                    <thead>
+                        <tr>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Telefone</th>
+                        <th scope="col">Endereço</th>
+                        <th scope="col">Editar/Excluir</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                        {{> tabela_clientes}}
+                </table>
+            </div>
+        </div>
+        <a href="/clientes/add" class="btn btn-info btn-block mt-5" > Cadastrar novo cliente</a>
+    </div>
+    
+</div>
