--- a/views/dashboard/client/e_client.handlebars
+++ b/views/dashboard/client/e_client.handlebars
@@ -4,15 +4,14 @@
 <div class="page">
 <div class="container">
         <div class="mt-2">
-          <h1>Veículo
-          </h2>
+          <h1>Clientes</h1>
           <hr>
         </div>
 
     <div class="card">
               <div id="card" class="card-header">
-                  <svg class="m-1" width="20" height="20"><use xlink:href="#road"/></svg>
-                  Editar Cliente
+                  <svg class="m-1" width="20" height="20"><use xlink:href="#client"/></svg>
+                  Cadastrar Cliente
               </div>
     
               <div id="card-body" class="card-body">
@@ -39,7 +38,7 @@
 
                     <div class="container d-flex m-2">
                         <label for="telefone">
-                            <svg class="m-1" width="20" height="20"><use xlink:href="#user"/></svg>
+                            <svg class="m-1" width="20" height="20"><use xlink:href="#phone"/></svg>
                         </label>
     
                         <input type="text" id="telefone" class="form-control" placeholder="Telefone">
@@ -47,13 +46,11 @@
 
                     <div class="container d-flex m-2">
                         <label for="endereco">
-                            <svg class="m-1" width="20" height="20"><use xlink:href="#clients"/></svg>
+                            <svg class="m-1" width="20" height="20"><use xlink:href="#map"/></svg>
                         </label>
     
                         <input type="text" id="map" class="form-control" placeholder="Endereço">
-                    </div>
-
-                    
+                    </div>  
                 </form>
                 
               </div>
@@ -62,7 +59,7 @@
 
     <div class="d-flex mx-1">
         <button type="button" class="btn btn-outline-info btn-block mt-3 mx-1" > Cancelar</button>
-        <button type="button" class="btn btn-info btn-block mt-3 mx-1" > Salvar Alterações</button>
+        <button type="button" class="btn btn-info btn-block mt-3 mx-1" > Cadastrar novo cliente</button>
     </div>
 
 </div>
