--- a/views/dashboard/vehicle/e_vehicle.handlebars
+++ b/views/dashboard/vehicle/e_vehicle.handlebars
@@ -3,7 +3,7 @@
 
 <div class="page">
 <div class="container">
-        <div class="mt-2">
+        <div class="mt-5 mb-4">
           <h1>Veículo
           </h2>
           <hr>
@@ -52,7 +52,7 @@
 
                     <div class="container d-flex m-2">
                         <label for="money">
-                            <svg class="m-1" width="20" height="20"><use xlink:href="#road"/></svg>
+                            <svg class="m-1" width="20" height="20"><use xlink:href="#money"/></svg>
                         </label>
     
                         <input type="text" id="money" class="form-control" placeholder="Custo diário">
