--- a/views/partials/tabela_alocacoes.handlebars
+++ b/views/partials/tabela_alocacoes.handlebars
@@ -1,14 +1,19 @@
 <div class="tabela_alocacoesPartials"> 
 
+    {{#each veiculos}}
     <tr>
-        <td>Info 01</td>
-        <td>Info 02</td>
-        <td>Info 03</td>
-        <td>Info 04</td>
-        <td >
-            <a id="edit_btn" class="btn" href="#" >{{> edit}}</a>
-            <a id="exclude_btn" class="btn" href="#" >{{> exclude}}</a>
+        <td>{{this.modelo}}</td>
+        <td>{{this.placa}}</td>
+        <td>{{this.custo}}</td>
+        <td>{{this.cor}}</td>
+        <td style="display: flex;">
+            <a id="edit_btn" class="btn" href="/dashboard/vehicles/edit/{{this.id}}" >{{> edit}}</a>
+
+            <form action="/dashboard/vehicles/delete/{{this.id}}" method="post">
+                <button type="submit" id="exclude_btn" class="btn" href="#" >{{> exclude}}</a>
+            </form>
+
         </td>
     </tr>
-
+    {{/each}}
 </div>
