--- a/views/dashboard/vehicle/vehicle.handlebars
+++ b/views/dashboard/vehicle/vehicle.handlebars
@@ -30,7 +30,7 @@
                 </table>
             </div>
         </div>
-        <a href="/vehicle/add" class="btn btn-info btn-block mt-5" > Cadastrar novo veículo</a>
+        <a href="/dashboard/vehicles/add" class="btn btn-info btn-block mt-5" > Cadastrar novo veículo</a>
     </div>
     
 </div>
