--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
              <li class="nav-item">
-                <a class="nav-link" href="/entrar">Entrar</a>
+                <a class="nav-link" href="/login">Entrar</a>
             </li>
             
           </ul>
