Já fiz a parte de logout

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -48,10 +48,16 @@
     </div>
       
       <div id="nav-footer" class="mt-5"> 
-        <a href="/" class="nav-link text-dark">
-            <svg class="bi pe-none me-2" width="25" height="25"><use xlink:href="#exit"/></svg>
-            Sair
-        </a>
+        <form action="/logout" method="post">
+
+          <button type="submit" >
+            <a class="nav-link text-dark">
+              <svg class="bi pe-none me-2" width="25" height="25"><use xlink:href="#exit"/></svg>
+              Sair
+          </a>
+          </button>
+
+        </form>
       </div>
       
       </main>
