--- a/views/dashboard/client/client.handlebars
+++ b/views/dashboard/client/client.handlebars
@@ -13,7 +13,7 @@
                 <svg class="m-1" width="20" height="20"><use xlink:href="#road"/></svg>
                 Clientes Cadastrados
             </div>
-            <div class="card-body">     
+            <div class="card-body">    
                 <table class="table">
                     <thead>
                         <tr>
@@ -29,7 +29,7 @@
                 </table>
             </div>
         </div>
-        <a href="/clientes/add" class="btn btn-info btn-block mt-5" > Cadastrar novo cliente</a>
+        <a href="/clients/add" class="btn btn-info btn-block mt-5" > Cadastrar novo cliente</a>
     </div>
     
 </div>
