--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -33,7 +33,7 @@
             </a>
           </li>
           <li id="clientes">
-            <a href="/clientes" class="nav-link text-dark">
+            <a href="/clients" class="nav-link text-dark">
               <svg class="bi pe-none m-2" width="25" height="25"><use xlink:href="#clients"/></svg>
               Clientes
             </a>
